[project]
name = "ndn-101"
version = "1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material (>=9.6,<10.0)",
    "mkdocs-bibtex (>=2.11,<3.0)",
    "pypandoc-binary (>=1.12,<2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
